--- a/myopenstories/locale/fr/LC_MESSAGES/django.po
+++ b/myopenstories/locale/fr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-09-28 21:44+0200\n"
+"POT-Creation-Date: 2020-09-28 22:17+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -199,8 +199,8 @@ msgid ""
 "mhios includes an interactive story teller which can be used to read "
 "interactively any story available in the library."
 msgstr ""
-"mhios inclut une boîte à histoires permettant de lire de "
-"manièreinteractive toutes les histoires disponibles dans la bibliothèque"
+"mhios inclut une boîte à histoires permettant de lire de manièreinteractive "
+"toutes les histoires disponibles dans la bibliothèque"
 
 #: myopenstories/templates/myopenstories/index.html:98
 msgid ""
@@ -250,4 +250,3 @@ msgstr "mhios n'est affilié à"
 #: myopenstories/templates/myopenstories/index.html:112
 msgid "in any way"
 msgstr "en aucune façon"
-
