--- a/reader/locale/fr/LC_MESSAGES/django.po
+++ b/reader/locale/fr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-10-01 21:54+0200\n"
+"POT-Creation-Date: 2020-10-05 20:14+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -27,8 +27,8 @@ msgid ""
 "Your private selection of stories is empty. Go to the library to add stories "
 "to your personal library."
 msgstr ""
-"Votre sélection privée d'histoires est vide. Rendez-vous dans la bibliothèque " 
-"afin d'ajouter des histoire dans votre librairie personnelle."
+"Votre sélection privée d'histoires est vide. Rendez-vous dans la "
+"bibliothèque afin d'ajouter des histoire dans votre librairie personnelle."
 
 #: reader/templates/reader/index.html:27
 msgid "Library"
