--- a/accounts/locale/fr/LC_MESSAGES/django.po
+++ b/accounts/locale/fr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-10-12 18:04+0200\n"
+"POT-Creation-Date: 2020-10-12 20:11+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -54,7 +54,8 @@ msgstr "Un email a été envoyé à l'adresse"
 msgid ""
 "including a validation link to confirm your email and validate your account."
 msgstr ""
-"incluant un lien de validation afin de confirmer votre email et valider votre compte."
+"incluant un lien de validation afin de confirmer votre email et valider "
+"votre compte."
 
 #: accounts/templates/accounts/confirmation.html:9
 msgid "Please check you emails and use the validation link."
