--- a/myopenstories/locale/fr/LC_MESSAGES/django.po
+++ b/myopenstories/locale/fr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-10-12 20:11+0200\n"
+"POT-Creation-Date: 2020-10-12 20:28+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -123,6 +123,10 @@ msgstr "Vous êtes à un click des histoires!"
 #: templates/mail_body.html:14
 msgid "Please click"
 msgstr "Veuillez cliquer "
+
+#: templates/mail_body.html:14
+msgid "here"
+msgstr "ici"
 
 #: templates/mail_body.html:14
 msgid "to confirm your mhios account"
