--- a/accounts/locale/fr/LC_MESSAGES/django.po
+++ b/accounts/locale/fr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-10-12 20:28+0200\n"
+"POT-Creation-Date: 2020-10-12 20:47+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -101,6 +101,10 @@ msgstr "Votre mot de passe a été changé. Vous pouvez maintenant vous"
 #: accounts/templates/registration/password_reset_complete.html:9
 msgid "sign in"
 msgstr "connecter"
+
+#: accounts/templates/registration/password_reset_complete.html:9
+msgid "now."
+msgstr "."
 
 #: accounts/templates/registration/password_reset_confirm.html:8
 #: accounts/templates/registration/password_reset_confirm.html:12
